--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-04>
+#+DATE: Time-stamp: <2015-07-07>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -62,6 +62,7 @@
      ansys-mode is not activated!? <- autoloaded functions, should
      work they are calling -mode.el!
 ** Wish-list
+   - switch off advising of M-w
    - color scheme of *msg command is only readable on terminals
    - add adwords to gh-pages
    - abreviated input method for all graphics functions zoom, etc.
@@ -222,6 +223,12 @@
     iivvgg@gmail.com,
     Michaelk@vipac.com.au,
     sparr@mfkrs1.mw.tu-dresden.de,
+    mhanke@cadfem.de,
+    tnelson@cadfem.de,
+    lkrueger@cadfem.de,
+    sheldonimaoka@yahoo.com,
+    kschoenborn@cadfem.de
+
     eyk.heinemann@continental-corporation.com,
     jens.2.missun@continental-corporation.com,
     joerg.menke@continental-corporation.com,
@@ -235,11 +242,6 @@
     zlatko.penzar@continental-corporation.com,
     saravana.kumar@continental-corporation.com,
     alwin.perras@continental-corporation.com,
-    mhanke@cadfem.de,
-    tnelson@cadfem.de,
-    lkrueger@cadfem.de,
-    sheldonimaoka@yahoo.com,
-    kschoenborn@cadfem.de
 
     # oleksiy.kurenkov@continental-corporation.com, left Conti
     # sgotthold@cadfem.de, left CadFem
