Ispelled NEWS.org

--- a/NEWS.org
+++ b/NEWS.org
@@ -19,11 +19,11 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 ** Version 16.1.1 July 2015
 
    - The command `ansys-show-command-parameters' (M-?) does
-     additonally count the number of parameters and visualise at which
-     parameter position the cursor currently is.  This tooltip can now
+     additionally count the number of parameters and visualise at which
+     parameter position the cursor currently is.  This tool-tip can now
      be switched off with a prefix argument of zero.
 
-   - The command `ansys-send-to-ansy-and-proceed' (C-c C-j) is now
+   - The command `ansys-send-to-ansys-and-proceed' (C-c C-j) is now
      interactive, i. e. after invoking this command with its key-sequence
      "C-c C-j" it can be repeated by typing just the final character "j"
      (or "C-j").
@@ -79,7 +79,7 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
      Functions: `ansys-hide-number-blocks', `ansys-show-number-blocks',
      `ansys-hide-region'
 
-     Customisable variables: `ansys-hide-region-before-string',
+     Customising variables: `ansys-hide-region-before-string',
      `ansys-hide-region-after-string' and
      `ansys-hide-region-propertize-markers'
 
@@ -112,7 +112,7 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
      nothing!  Finding and browsing relevant APDL documentation is still
      cumbersome and too slow.
 
-     As a highlight of this release you can now read immeadiately the
+     As a highlight of this release you can now read immediately the
      detailed ANSYS help in your web browser for *all* APDL command AND
      element names around the cursor (or for the first command in the
      current line if that fails to be valid keyword).  You may input your
@@ -185,7 +185,7 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
    - Applied sensible defaults to ansys-lmutil-program, ansys-program and
      ansys-help-program, for most needs it should now be enough just to
      set the used ansys version (ansys-current-ansys-version, if it is
-     not 140, see the example config file default_el) and maybe
+     not 140, see the example configuration file default_el) and maybe
      additionally the installation directory (ansys-install-directory).
 
 ** Version 13.0.1 March 2011
@@ -215,12 +215,12 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
    - Some new graphics commands like ansys-zoom-in, -zoom-out,
      -move-left, -right, -up, -down, etc.
 
-   - The lisp code had to be split up for better maintance, the code
+   - The lisp code had to be split up for better maintenance, the code
      files for are now provided in an archive together with their
      compiled state for speed reasons.
 
-   - Reworked the fontification mainly for the sake of speed.  There are
-     now highlighting levels to choose from, offering e. g. higlighting
+   - Reworked the highlighting mainly for the sake of speed.  There are
+     now highlighting levels to choose from, offering e. g. highlighting
      of deprecated element types in a warning-face, deprecated Ansys *
      comments and so on
 
@@ -238,19 +238,19 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
      clipboard).  Given a prefix argument to these commands, the cursor
      won't move to the next code line.
 
-   - The completion of Ansy keywords is reworked and has improved.  Ansys
-     symbols are now completed in 3 ways: Upcase, downcase and
+   - The completion of Ansys keywords is reworked and has improved.  Ansys
+     symbols are now completed in 3 ways: Up-case, down-case and
      capitalise.
 
-   - New: Added tooltips to all Ansys menu entries.  Activated or
-     deactivated menue entries according to the context
+   - New: Added tool-tips to all Ansys menu entries.  Activated or
+     deactivated menu entries according to the context
 
    - Ansys mode tries to gather information from the OS environment when
      the variable `ansys-license-file' is not set by the user and uses
      now Ansys standard names as default values for some more variables.
 
    - The variables in the variable summary are now sorted according to
-     their first occurance and not any longer in "definition types".  Now
+     their first occurrence and not any longer in "definition types".  Now
      component names are included with the variable highlighting.
 
    - Added menu entry for reloading Ansys Mode for the case when certain
@@ -303,7 +303,7 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
    - The apostrophe "'" is now assigned as the Ansys string and the
      value of character parameters delimiter and not wrongly """;
-     the strings are fontified accordingly.
+     the strings are highlighted accordingly.
 
    - The dollar sign "$" is now emphasised as the Ansys condensed
      input character (multiple Ansys commands in one line).
@@ -324,9 +324,9 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
    - The ampersand "&" is now correctly highlighted as the only
      available Ansys continuation character applicable to the format
      commands (*MSG, *MWRITE, *VREAD and *VWRITE) command and the
-     subsequent format strings of the command are fontified.
+     subsequent format strings of the command are highlighted.
 
-   - New: " *" (SPC before *) is indicated as an (Ansys deprecated)
+   - New: " *" (<SPC> before `*') is indicated as an (Ansys deprecated)
      comment sign e. g.: %% a = 3 **4 %% results in "a" having the value
      3, whereas %% a = 3**4 %% sets "a" to 81!
 
